# VocalSuiteUltra

./: .gitignore  CMakeLists.txt  CleanBuild.ps1  DSP_REFINEMENT_PASS1.md  FinalFeaturePack_README.md  GUI_FINAL_README.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/Compressor/: FET1176.cpp  FET1176.h
Source/DSP/DeEsser/: DeEsser.cpp  DeEsser.h
Source/DSP/EQ/: VocalEQ.cpp  VocalEQ.h
Source/DSP/Engine/: DspEngine.cpp  DspEngine.h
Source/DSP/HiEnd/: HiEndExciter.cpp  HiEndExciter.h
Source/DSP/Meter/: MeterEngine.cpp  MeterEngine.h
Source/DSP/Saturation/: Saturation.cpp  Saturation.h
Source/GUI/Analyzer/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
Source/GUI/Buttons/: LedButton.cpp  LedButton.h
Source/GUI/Components/: FooterBar.cpp  FooterBar.h  GlassPanel.cpp  GlassPanel.h  HeaderBar.cpp  HeaderBar.h
Source/GUI/Knobs/: ProKnob.cpp  ProKnob.h
Source/GUI/LookAndFeel/: ProLookAndFeel.cpp  ProLookAndFeel.h
Source/GUI/Meters/: CorrelationMeter.cpp  CorrelationMeter.h  LevelMeter.cpp  LevelMeter.h  LufsMeter.cpp  LufsMeter.h
Source/GUI/Panels/: ModulePanel.cpp  ModulePanel.h
Source/GUI/Presets/: PresetBrowser.cpp  PresetBrowser.h
Source/License/: LicenseManager.cpp  LicenseManager.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
Source/Preset/: PresetManager.cpp  PresetManager.h
Source/Standalone/: Main.cpp
